<resources>
    <string name="app_name">Everything</string>
    <string name="red">Red</string>
    <string name="magenta">Magenta</string>
    <string name="cyan">Cyan</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>

    <string-array name="states">
        <item>Baja California</item>
        <item>Chihuahua</item>
        <item>Sinaloa</item>
        <item>Sonora</item>
        <item>Guanajauto</item>
        <item>Jalisco</item>
        <item>Guerrero</item>
        <item>Veracruz</item>
        <item>Nuevo Leon</item>
        <item>San Luis Potosi</item>
        <item>Cintanaroo</item>
        <item>México</item>
        <item>Puebla</item>
        <item>Nayarit</item>
        <item>Yucatan</item>
        <item>Hidalgo</item>
        <item>Quahuila</item>
    </string-array>
</resources>
