<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rocha.karla.everything.RadioButton">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_below="@id/toolbar"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/layout_padding">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="318dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp">

            <RadioButton
                android:id="@+id/radioButton1Id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red" />

            <RadioButton
                android:id="@+id/radioButton2Id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yellow" />

            <RadioButton
                android:id="@+id/radioButton3Id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/magenta" />

            <RadioButton
                android:id="@+id/radioButton4Id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cyan" />
        </RadioGroup>
    </LinearLayout>
</RelativeLayout>
